--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "msme-payment-tracker",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "MSME Payment Tracker - Professional NestJS Backend",
+  "author": "Your Name",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -13,6 +13,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "seed": "ts-node src/seed.ts",
+    "seed:prod": "cross-env NODE_ENV=production ts-node src/seed.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -44,6 +45,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
+    "cross-env": "^7.0.3",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
